correccion de imagen del logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="/challengeonecodificador3/imagenes/logo.png" alt="Logo de alura">
+        <img src="imagenes/logo.png" alt="Logo de alura">
     </header>
     <main>
         <section>
